Change: Public access for publish

--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
       "require": "./dist/lib.cjs"
     }
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "scripts": {
     "build": "vite build"
   },
