--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@larex/cli",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "CLI Wrapper for Larex Framework build tool (vite)",
   "type": "module",
   "main": "dist/lib",
@@ -24,6 +24,7 @@
     "dist"
   ],
   "dependencies": {
+    "cac": "^6.7.14",
     "commander": "^10.0.0",
     "vite": "^4.2.1"
   },
